@@ -198,7 +198,7 @@ public:
     long long acqts = data.timestamp(0).value();
     unsigned evrfid = dg.seq.stamp().fiducials();
     unsigned long long psPerFiducial = 2777777777ULL;
-    long long evrdiff = ((evrfid-_lastEvrFid)&((1<<Pds::TimeStamp::NumFiducialBits)-1))*psPerFiducial;
+    long long evrdiff = ((evrfid > _lastEvrFid) ? (evrfid-_lastEvrFid) : (evrfid-_lastEvrFid+Pds::TimeStamp::MaxFiducials))*psPerFiducial;
     long long acqdiff = acqts-_lastAcqTS;
     long long diff = abs(evrdiff - acqdiff);
     // empirical number for "fuzzy" equality comparison.
