@@ -15,7 +15,6 @@
 #include "pds/utility/NetDgServer.hh"
 #include "pds/xtc/CDatagram.hh"
 #include "pds/management/EbIStream.hh"
-#include "pds/management/MsgAppliance.hh"
 
 using namespace Pds;
 
@@ -67,8 +66,6 @@ bool EventLevel::attach()
     _streams->wire(StreamParams::FrameWork)->add_input(_inlet->output());
 
     _callback.attached(*_streams);
-
-    (new MsgAppliance)->connect(_streams->stream()->inlet());
 
     Message join(Message::Join);
     mcast(join);
