@@ -13,7 +13,6 @@
 #include "pds/service/NetServer.hh"
 #include "pds/utility/BldServer.hh"
 #include "pds/utility/NetDgServer.hh"
-#include "pds/management/MsgAppliance.hh"
 #include "pds/vmon/VmonEb.hh"
 
 using namespace Pds;
@@ -47,8 +46,6 @@ bool RecorderLevel::attach()
     
     _callback.attached(*_streams);
 
-    (new MsgAppliance)->connect(_streams->stream()->inlet());
-    
     //    _rivals.insert(_index, msg.reply_to()); // revisit
     Message join(Message::Join);
     mcast(join);
